--- a/vignettes/supplementary/tree_structured_paramsets.Rmd
+++ b/vignettes/supplementary/tree_structured_paramsets.Rmd
@@ -89,13 +89,13 @@ To tackle the above mentioned problem, we have the following code. Each separate
 ## Neural network architecture specification
 Multiple Layers
 ```{r nn}
-  ps = ParamSetTree$new("nn", nr = 2,
+  ps = ParamSetTreeRe$new("nn", nr = 2,
       ParamInt$new(id = "layer_dense.units", lower = 2L, upper = 1000L),
       ParamReal$new(id = "kernel_regularizer", lower = 0, upper = 3.0), 
       ParamReal$new(id = "bias_regularizer", lower = 0, upper = 3.0), 
       ParamCategorical$new(id = "reg_type", values = c("regularizer_l1", "regularizer_l2")),
       ParamCategorical$new(id = "activation_fun", values = c("sigmoid", "tanh", "linear")))
-  ps$sample(1)
+  ps$sample(3L)
 ``` 
 
 ```{r keras}
