--- a/vignettes/supplementary/tree_structured_paramsets.Rmd
+++ b/vignettes/supplementary/tree_structured_paramsets.Rmd
@@ -1,12 +1,5 @@
 ---
 title: "Tree structured ParamSets"
-output:
-  html_document:
-    toc: true
-    toc_float:
-      collapsed: true
-      smooth_scroll: false
-    dev: svg
 vignette: >
   %\VignetteIndexEntry{Tree structured ParamSets}
   %\VignetteEngine{knitr::rmarkdown}
@@ -41,18 +34,23 @@ To tackle the above mentioned problem, we have the following code. Each separate
 ```{r example1}
 library(phng)
 pst = ParamSetTree$new("test",
-   ParamCategorical$new(id = "model", values = c("SVM", "RF")),
-   addDep(ParamReal$new(id = "C", lower = 0, upper = 100), 
-     did = "model", expr = quote(model == "SVM")), # did here means dependant id
-   addDep(ParamCategorical$new(id = "kernel", values = c("rbf", "poly")), 
-     did = "model", expr = quote(model == "SVM")),
-   addDep(ParamReal$new(id = "gamma", lower = 0, upper = 101), 
-     did = "kernel", expr = quote(kernel == "rbf")),
-   addDep(ParamInt$new(id = "n", lower = 1L, upper = 10L), 
-     did = "kernel", expr = quote(kernel == "poly")),
-   addDep(ParamInt$new(id = "n_tree", lower = 1L, upper = 10L), 
-     did = "model", expr = quote(model == "RF"))
-   )
+  ParamCategorical$new(id = "model", values = c("SVM", "RF")),
+  addDep(
+    ParamReal$new(id = "C", lower = 0, upper = 100), 
+    did = "model", expr = quote(model == "SVM")), # did here means dependant id
+  addDep(
+    ParamCategorical$new(id = "kernel", values = c("rbf", "poly")), 
+    did = "model", expr = quote(model == "SVM")),
+  addDep(
+    ParamReal$new(id = "gamma", lower = 0, upper = 101), 
+    did = "kernel", expr = quote(kernel == "rbf")),
+  addDep(
+    ParamInt$new(id = "n", lower = 1L, upper = 10L), 
+    did = "kernel", expr = quote(kernel == "poly")),
+  addDep(
+    ParamInt$new(id = "n_tree", lower = 1L, upper = 10L), 
+    did = "model", expr = quote(model == "RF"))
+)
 pst$sample(1L)
 pst$sample(10L)
 ```
@@ -61,25 +59,33 @@ pst$sample(10L)
 ## Machine learning pipeline specification 
 ```{r ml}
 pst = ParamSetTree$new("pre",     
- ParamCategorical$new(id = "preprocessing", values = c("PCA", "FeatureFiltering")),
-  addDep(ParamInt$new(id = "pca.k", lower = 1, upper = 5), 
+  ParamCategorical$new(id = "preprocessing", values = c("PCA", "FeatureFiltering")),
+  addDep(
+    ParamInt$new(id = "pca.k", lower = 1, upper = 5), 
     did = "preprocessing", expr = quote(preprocessing == "PCA")),
-   addDep(ParamInt$new(id = "filter.n", lower = 1, upper = 10), 
-     did = "preprocessing", expr = quote(preprocessing == "FeatureFiltering")))
+ addDep(
+   ParamInt$new(id = "filter.n", lower = 1, upper = 10), 
+   did = "preprocessing", expr = quote(preprocessing == "FeatureFiltering"))
+)
 
 pst1 = ParamSetTree$new("ml",
-   ParamCategorical$new(id = "model", values = c("SVM", "RF")),
-   addDep(ParamReal$new(id = "C", lower = 0, upper = 100), 
-     did = "model", expr = quote(model == "SVM")), # did here means dependant id
-   addDep(ParamCategorical$new(id = "kernel", values = c("rbf", "poly")), 
-     did = "model", expr = quote(model == "SVM")),
-   addDep(ParamReal$new(id = "gamma", lower = 0, upper = 101), 
-     did = "kernel", expr = quote(kernel == "rbf")),
-   addDep(ParamInt$new(id = "poly.n", lower = 1L, upper = 10L), 
-     did = "kernel", expr = quote(kernel == "poly")),
-   addDep(ParamInt$new(id = "n_tree", lower = 1L, upper = 10L), 
-     did = "model", expr = quote(model == "RF"))
-   )
+  ParamCategorical$new(id = "model", values = c("SVM", "RF")),
+  addDep(
+    ParamReal$new(id = "C", lower = 0, upper = 100), 
+    did = "model", expr = quote(model == "SVM")), # did here means dependant id
+  addDep(
+    ParamCategorical$new(id = "kernel", values = c("rbf", "poly")), 
+    did = "model", expr = quote(model == "SVM")),
+  addDep(
+    ParamReal$new(id = "gamma", lower = 0, upper = 101), 
+    did = "kernel", expr = quote(kernel == "rbf")),
+  addDep(
+    ParamInt$new(id = "poly.n", lower = 1L, upper = 10L), 
+    did = "kernel", expr = quote(kernel == "poly")),
+  addDep(
+    ParamInt$new(id = "n_tree", lower = 1L, upper = 10L), 
+    did = "model", expr = quote(model == "RF"))
+)
 pst$setChild(pst1)
 pst$sample(4L)
 ```
@@ -89,11 +95,11 @@ Multiple Layers
 
 ```{r nn}
 ps = ParamSetTreeRe$new("nn", nr = 2,
-    ParamInt$new(id = "layer_dense.units", lower = 2L, upper = 1000L),
-    ParamReal$new(id = "kernel_regularizer", lower = 0, upper = 3.0), 
-    ParamReal$new(id = "bias_regularizer", lower = 0, upper = 3.0), 
-    ParamCategorical$new(id = "reg_type", values = c("regularizer_l1", "regularizer_l2")),
-    ParamCategorical$new(id = "activation_fun", values = c("sigmoid", "tanh", "linear")))
+  ParamInt$new(id = "layer_dense.units", lower = 2L, upper = 1000L),
+  ParamReal$new(id = "kernel_regularizer", lower = 0, upper = 3.0), 
+  ParamReal$new(id = "bias_regularizer", lower = 0, upper = 3.0), 
+  ParamCategorical$new(id = "reg_type", values = c("regularizer_l1", "regularizer_l2")),
+  ParamCategorical$new(id = "activation_fun", values = c("sigmoid", "tanh", "linear")))
 ps$sample(3L)
 ``` 
 
