--- a/README.Rmd
+++ b/README.Rmd
@@ -28,10 +28,10 @@ devtools::install_github("mlr-org/paradox", dependencies = TRUE)
 
 Create a simple ParamSet using all supported Parameter Types:
 
-* _int_egers
-* _real_-valued numbers
-* _flag_ for `TRUE`/`FALSE`
-* _categorical_ values, namely characters.
+* integer numbers ("`Int`")
+* real-valued numbers ("`Dbl`")
+* logical values `TRUE` or `FALSE` ("`Lgl`")
+* categorical values from a set of possible strings ("`Fct`")
 * Further types are only possible by using transformations.
 
 ```{r ps}
