--- a/vignettes/paradox.Rmd
+++ b/vignettes/paradox.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Introduction to Paradox"
 author: "Martin Binder"
-output: rmarkdown::html_vignette
+output:
+  rmarkdown::html_vignette:
+    toc: true
 vignette: >
   %\VignetteIndexEntry{Introduction to Paradox}
   %\VignetteEngine{knitr::rmarkdown}
@@ -259,6 +261,8 @@ design <- generate_design_random(psexp, 2)
 print(design)
 design$transpose(trafo = TRUE)
 ```
+
+### Transformation between Types
 
 Usually the design created with one `ParamSet` is used to set up other objects that themselves have a `ParamSet` which defines the values they take. The `ParamSet`s that can be used for random sampling, however, are restricted in some ways: They must have finite bounds, and they may not contain untyped (`ParamUty`) parameters. `$trafo` provides the glue for these situations. There is relatively little constraint on the trafo function's return value, so it is possible to return values that have different bounds or even types than the original `ParamSet`. It is even possible to remove parameters and add others.
 
