--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ output: github_document
 
 ```{r setup, include=FALSE}
 set.seed(123)
-knitr::opts_chunk$set(cache = TRUE, collapse = FALSE, warning = FALSE, error = FALSE)
+knitr::opts_chunk$set(cache = TRUE, collapse = TRUE, comment = "#>")
 library(paradox)
 ```
 
@@ -30,16 +30,16 @@ Create a simple ParamSet using all supported Parameter Types:
 
 * integer numbers ("`Int`")
 * real-valued numbers ("`Dbl`")
-* logical values `TRUE` or `FALSE` ("`Lgl`")
+* truth values `TRUE` or `FALSE` ("`Lgl`")
 * categorical values from a set of possible strings ("`Fct`")
-* Further types are only possible by using transformations.
+* further types are only possible by using transformations.
 
 ```{r ps}
 ps = ParamSet$new(
   params = list(
     ParamInt$new(id = "z", lower = 1, upper = 3),
     ParamDbl$new(id = "x", lower = -10, upper = 10),
-    ParamLgl$new(id = "switch"),
+    ParamLgl$new(id = "flag"),
     ParamFct$new(id = "methods", values = c("a","b","c"))
   )
 )
@@ -48,9 +48,6 @@ ps = ParamSet$new(
 Draw random samples / create random design:
 
 ```{r pssample}
-smplr = SamplerUnif$new(ps)
-smplr$sample(3)
-
 generate_design_random(ps, 3)
 ```
 
@@ -62,7 +59,7 @@ generate_design_lhs(ps, 3)
 
 Generate Grid Design:
 
-```{r psgrid}
+```{r psgrid, R.options=list(max.print=30)}
 generate_design_grid(ps, resolution = 2)
 ```
 
@@ -73,11 +70,13 @@ ps$ids()
 ps$values
 ps$nlevels
 ps$is_number
+ps$lower
+ps$upper
 ```
 
-### Numeric ParamSet
+### "Vector" Parameters
 
-Things you can do on an all numeric ParamSet:
+Sometimes it is useful to have multiple copies of a parameter, akin to a vector. The `Param$rep()` creates a `ParamSet` with repeated entries of the `Param`.
 
 ```{r psnumeric}
 ps = ParamSet$new(
@@ -89,23 +88,22 @@ ps$lower
 ps$upper
 ```
 
-The usage of `Parameter$repeat()` generates tags that indicate to which group the parameters belong to:
+Parameters repeated with `Param$rep()` have tags that indicate to which group the parameters belong:
 
 ```{r psnumerictags}
 ps$tags
 ```
 
-This becomes useful if you want to do operations on parameters of one group like with transformations.
+This becomes useful if you want to do operations on parameters of one group, for example turning them into a vector inside transformations.
 
 ### Transformations
 
 Transformations are functions with a fixed signature.
 
-* `x` A `data.table` of parameter values. Each column contains a vector of parameter values of a single parameter.
-* `dict` An environment, that can be accessed using the `$` operator. It can contains values that don't belong to any parameter but are important for transformations.
-* `tags` A list of the tags for each parameter. Each parameter can have various tags indicating additional characteristics.
+* `x` A named list of parameter values
+* `param_set` the `ParamSet` used to create the design
 
-Transformations are useful to scale parameters:
+Transformations can be used to change the distributions of sampled parameters. For example, to sample values between 2^-3 and 2^3 in a log2-uniform distribution, one can sample uniformly between -3 and 3 and exponentiate the random value inside the transformation.
 
 ```{r pstransscale}
 ps = ParamSet$new(
@@ -119,62 +117,31 @@ ps$trafo = function(x, param_set) {
   return(x)
 }
 ps_smplr = SamplerUnif$new(ps)
-x = ps_smplr$sample(3)
+x = ps_smplr$sample(2)
 xst = x$transpose(trafo = TRUE)
 xst
 ```
 
 ### Advanced Transformations
 
-The following creates a ParamSet with a transformation that scales the `x` values and returns them as a vector.
-The original parameters will be removed from the trafo result.
-Keep in mind that `z` stays untouched and remains after the transformation.
+The following creates a `ParamSet` with a transformation that scales the `x` values and returns them as a vector. The original parameters will be removed from the trafo result. The unrelated parameter `z` remains after the transformation.
 
 ```{r psnumtrans}
-ps = ParamSet$new(
-  params = c(
-    list(ParamInt$new(id = "z", lower = -10, upper = 10)),
-    ParamDbl$new(id = "x", lower = 0, upper = 1)$rep(2L)
-  ),
-  trafo = function(x, dict, tags) {
+ps = ParamSet$new(list(ParamInt$new(id = "z", lower = -10, upper = 10)))
+ps$add(ParamDbl$new(id = "x", lower = 0, upper = 1)$rep(2L))
+ps$trafo = function(x, param_set) {
     scale = function(x1, x2) c(x1, x2) / sqrt(x1^2+x2^2)
-    x$x = Map(scale, x$x_repeated_1, x$x_repeated_2)
-    x$x_repeated_1 = NULL
-    x$x_repeated_2 = NULL
+    x$x = scale(x$x_rep_1, x$x_rep_2)
+    x$x_rep_1 = NULL
+    x$x_rep_2 = NULL
     return(x)
   }
-)
 ```
 
 The output of all value generating functions won't change for a ParamSet that has a `trafo` function.
 Instead these outputs can be put into `ps$transform()` to obtain the desired parameter values.
 
 ```{r psnumtrans2}
-x = ps$generate_lhs_design(3)
-ps$transform(x)
-```
-
-For more advanced transformations on repeated parameters you can use `trafo_on_repeated_param()`:
-
-```{r trafo_on_repeated_param}
-ps = ParamSet$new(
-  params = c(
-    list(
-      ParamLgl$new(id = "switch"),
-      ParamInt$new(id = "z", lower = 1, upper = 4)
-    ),
-    ParamDbl$new(id = "x", lower = 0, upper = 1)$rep(4L)
-  ),
-  trafo = trafo_on_repeated_param(
-    fun = function(x, dict, tags) {
-      scale = function(z, ...) {
-        x = c(...)[1:z]
-        x / sum(x)
-      }
-      res = do.call(Map, c(list(f = scale, z = dict$z), as.list(x)))
-      list(x = res)
-    }, repeated_param_id = "x", additional_params = "z")
-  )
-(x = ps$sample(3))
-ps$transform(x)
+x = generate_design_random(ps, 2)
+x$transpose(trafo = TRUE)
 ```
