Remove things from README.Rmd that are in vignette

--- a/README.Rmd
+++ b/README.Rmd
@@ -75,27 +75,16 @@ ps$lower
 ps$upper
 ```
 
-### "Vector" Parameters
+### Parameter Checks
 
-Sometimes it is useful to have multiple copies of a parameter, akin to a vector. The `Param$rep()` function creates a `ParamSet` with repeated entries of the parameter.
+Check that a parameter satisfies all conditions of a `ParamSet`, using `$test()` (returns `FALSE` on mismatch), `$check()` (returns error description on mismatch), and `$assert()` (throws error on mismatch):
 
-```{r psnumeric}
-ps = ParamSet$new(
-  params = list(ParamInt$new(id = "z", lower = -10, upper = 10))
-)
-x_ps = ParamDbl$new(id = "x", lower = 0, upper = 1)$rep(2L)
-ps$add(x_ps)
-ps$lower
-ps$upper
+```{r, error = TRUE}
+ps$test(list(z = 1, x = 1))
+ps$test(list(z = -1, x = 1))
+ps$check(list(z = -1, x = 1))
+ps$assert(list(z = -1, x = 1))
 ```
-
-Parameters repeated with `Param$rep()` have tags that indicate to which group the parameters belong:
-
-```{r psnumerictags}
-ps$tags
-```
-
-This becomes useful if you want to do operations on parameters of one group, for example turning them into a vector inside transformations.
 
 ### Transformations
 
@@ -121,28 +110,4 @@ ps_smplr = SamplerUnif$new(ps)
 x = ps_smplr$sample(2)
 xst = x$transpose(trafo = TRUE)
 xst
-```
-
-### Advanced Transformations
-
-The following creates a `ParamSet` with a transformation that scales the `x` values and returns them as a vector. The original parameters will be removed from the trafo result. The unrelated parameter `z` remains after the transformation.
-
-```{r psnumtrans}
-ps = ParamSet$new(list(ParamInt$new(id = "z", lower = -10, upper = 10)))
-ps$add(ParamDbl$new(id = "x", lower = 0, upper = 1)$rep(2L))
-ps$trafo = function(x, param_set) {
-    scale = function(x1, x2) c(x1, x2) / sqrt(x1^2+x2^2)
-    x$x = scale(x$x_rep_1, x$x_rep_2)
-    x$x_rep_1 = NULL
-    x$x_rep_2 = NULL
-    return(x)
-  }
-```
-
-The output of all value generating functions won't change for a ParamSet that has a `trafo` function.
-Instead these outputs can be put into `ps$transform()` to obtain the desired parameter values.
-
-```{r psnumtrans2}
-x = generate_design_random(ps, 2)
-x$transpose(trafo = TRUE)
 ```
