--- a/vignettes/paradox.Rmd
+++ b/vignettes/paradox.Rmd
@@ -199,10 +199,7 @@ design = generate_design_grid(psSmall, 2)
 print(design)
 ```
 ```{r}
-generate_design_grid(psSmall, param_resolutions = c(A = 1, B = 1, C = 2))
-```
-```{r, echo = FALSE}
-# FIXME: remove 'A = 1' from above as soon as issue #178 is fixed
+generate_design_grid(psSmall, param_resolutions = c(B = 1, C = 2))
 ```
 
 ### Random Sampling
@@ -236,13 +233,13 @@ sampA$sample(5)
 
 #### Hierarchical Sampler
 
-The **`SamplerHierachical`** sampler is an auxiliary sampler that combines many 1D-Samplers to get a combined distribution. Its name "hierarchical" implies that it is able to respect parameter dependencies: Parameters only get sampled when their dependencies are met.
+The **`SamplerHierarchical`** sampler is an auxiliary sampler that combines many 1D-Samplers to get a combined distribution. Its name "hierarchical" implies that it is able to respect parameter dependencies: Parameters only get sampled when their dependencies are met.
 
 The following example shows how this works: The `Int` parameter `B` depends on the `Lgl` parameter `A` being `TRUE`. `A` is sampled to be `TRUE` in about half the cases, in which case `B` takes a value between 0 and 10. In the cases where `A` is `FALSE`, `B` is set to `NA`.
 
 ```{r}
 psSmall$add_dep("B", "A", CondEqual$new(TRUE))
-sampH = SamplerHierachical$new(psSmall,
+sampH = SamplerHierarchical$new(psSmall,
   list(Sampler1DCateg$new(parA),
     Sampler1DUnif$new(parB),
     Sampler1DUnif$new(parC))
@@ -271,7 +268,7 @@ The `Sampler` used in `generate_design_random` is the **`SamplerUnif`** sampler,
 
 While the different `Sapmler`s allow for a wide specification of parameter distributions, there are cases where the simplest way of getting a desired distribution is to sample parameters from a simple distribution (such as the uniform distribution) and then transform them. This can be done by assigning a function to the **`$trafo`** slot of a `ParamSet`. The `$trafo` function is called with two parameters: the list of parameter values to be transformed as **`x`**, and the `ParamSet` itself as **`param_set`**; it must return a list of transformed parameter values.
 
-The transformation is performed when calling the **`$transpose`** function of the `Design` object returned by a `Sampler` with the **`trafo`** param set to `TRUE`. The following, for example, creates a parameter that is exponentially distributed:
+The transformation is performed when calling the **`$transpose`** function of the `Design` object returned by a `Sampler` with the **`trafo`** param set to `TRUE` (the default). The following, for example, creates a parameter that is exponentially distributed:
 ```{r}
 psexp = ParamSet$new(list(ParamDbl$new("par", 0, 1)))
 psexp$trafo = function(x, param_set) {
@@ -280,7 +277,12 @@ psexp$trafo = function(x, param_set) {
 }
 design = generate_design_random(psexp, 2)
 print(design)
-design$transpose(trafo = TRUE)
+design$transpose()  # trafo is TRUE
+```
+
+Compare this to `$transpose()` without transformation:
+```{r}
+design$transpose(trafo = FALSE)
 ```
 
 ### Transformation between Types
@@ -319,7 +321,7 @@ print(design)
 ```
 Note that the `Design` only contains the column "`fun`" as a `character` column. To get a single value as a *function*, the `$transpose` function is used.
 ```{r}
-xvals = design$transpose(trafo = TRUE)
+xvals = design$transpose()
 print(xvals[[1]])
 ```
 We can now check that it fits the requirements set by `methodPS`, and that `fun` it is in fact a function:
@@ -348,7 +350,7 @@ print(design)
 ```
 The `Design` now contains the column "`quantile`" that will be used by the `$transpose` function to create the `fun` parameter. We also check that it fits the requirement set by `methodPS`, and that it is a function.
 ```{r}
-xvals = design$transpose(trafo = TRUE)
+xvals = design$transpose()
 print(xvals[[1]])
 methodPS$check(xvals[[1]])
 xvals[[1]]$fun(1:10)
